# Chess

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
client/: CMakeLists.txt  servers.txt
client/src/: defines.h  globals.c  globals.h  main.c  types.h
client/src/engine/: check.c  check.h  utility.c  utility.h  validators.c  validators.h
client/src/game/: game.c  game.h  rendering.c  rendering.h  ui.c  ui.h
client/src/network/: socket.c  socket.h
server/: index.ts  package.json
src/: check.c  check.h  defines.h  globals.c  globals.h  main.c  rendering.c  rendering.h  types.h  utility.c  utility.h  validators.c  validators.h
src/engine/: utility.c  utility.h  validators.c
src/game/: game.c  ui.c
